--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <title>NERDATE</title>
 
     <link href="https://fonts.googleapis.com/css?family=Baloo+Tammudu|Encode+Sans|Lato|Open+Sans|Roboto" rel="stylesheet">
-<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
   <link href="./css/style.css" type="text/css" rel="stylesheet">
 
@@ -26,10 +25,10 @@
 <div class="jumbotron">
   <div class="container-jumbo">
   <div class="hero-image">
-    <img src="./images/herogirlmain.png">
+    <img class="herogirl" src="./images/herogirlmain.png">
   </div>
    <div class="trontext">
-    <img src="./images/logojumbo.png">
+    <img class="logo" src="./images/logojumbo.png">
     <h1>Want to meet the nerd of your dreams?</h1>
     <h3>She’s right next door.</h3>
     <button class="cta"><a href="">MAKE IT COME TRUE</a></button>
@@ -69,15 +68,20 @@
      arcu condimentum quis. Sed tincidunt tempor ligula sed malesuada.
      Duis vitae arcu vel lacus varius tincidunt.</h4>
    </div>
+
+
 <img src="./images/girl4.png">
   </div>
 </div>
+
+   <!--PAGE3-->
 <div class="page3">
   <div class="container-3">
     <div>
     <img src="./images/girl5.png">
   </div>
   <div>
+
     <h5>MEET YOUR NAUGHTY NERD NOW</h5>
     <h6>Please take 30 seconds to complete your profile and start searching</h6>
     <!--SIGN UP FORM-->
@@ -167,7 +171,15 @@
 
 </fieldset>
 </form>
+<h6>Nerdate.com will periodically notify</br> you of
+potential matches in your area, </br> new matches you've
+received and changes to the service</br>  that may be of
+interest to you.</br> </br> 
+
+WE DO NOT PERFORM ANY</br>
+CRIMINAL BACKGROUND CHECKS</h6>
   </div>
+
   <div>
 <img src="./images/girl6.png">
 </div>
