--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>NERDATE</title>
-
+<link href="./css/reset.css" type="text/css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Baloo+Tammudu|Encode+Sans|Lato|Open+Sans|Roboto" rel="stylesheet">
-
   <link href="./css/style.css" type="text/css" rel="stylesheet">
 
 </head>
